<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bar_search"
    android:layout_width="match_parent"
    android:layout_height="58dp"
    android:background="@drawable/bottom_border"
    android:paddingBottom="1dp"
    android:paddingTop="1dp">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:background="@color/transparent"
        android:contentDescription="@string/navigation_button"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/search_bar_input"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="searchSong"
        android:background="@color/transparent"
        android:fontFamily="@font/open_sans_semibold"
        android:hint="@string/search_topic"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/speech_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/speech_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:background="@color/transparent"
        android:contentDescription="@string/search_button"

        android:src="@drawable/ic_baseline_mic_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
