<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bar_nav"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/rounded_corner"
    android:elevation="3dp">

    <ImageButton
        android:id="@+id/nav_button"
        android:layout_width="42dp"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:background="@color/transparent"
        android:contentDescription="@string/navigation_button"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_bar_input"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:background="@color/transparent"
        android:fontFamily="@font/open_sans_semibold"
        android:gravity="center_vertical"
        android:hint="@string/search_topic"
        android:singleLine="true"
        android:textColor="@color/dark_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/nav_button"
        app:layout_constraintRight_toLeftOf="@id/search_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_button"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="18dp"
        android:background="@color/transparent"
        android:contentDescription="@string/search_button"
        android:minWidth="48dp"
        android:src="@drawable/ic_baseline_search_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>


