<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/rounded_corner"
    android:elevation="3dp">


    <ImageView
        android:id="@+id/article_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:contentDescription="@string/article_image"
        android:scaleType="centerCrop"
        android:src="@drawable/no_image"
        app:layout_constraintBottom_toTopOf="@+id/name_location_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/name_location_holder"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="6dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/article_image">

        <TextView
            android:id="@+id/article_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_bold"
            android:maxLines="1"
            android:text="@string/placeholder"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/read_article_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/open_sans_semibold"
            android:maxLines="1"
            android:text="@string/read_article"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>